Define bean in configuration class quickfix